--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <meta property="og:image" content="https://dontiv77.github.io/invitacion-pau-50/Invitacion%20Pau.png">
     <meta property="og:title" content="¡Estás invitado a los 50 de Pau!">
     <meta property="og:description" content="Te espero para compartir una noche de risas y la mejor pasta.">
     <meta property="og:type" content="website">
